src/objects/Cartera_Vigente__c.object
<CustomObject>
    <fields>
        <fullName>Adjetivo_Fecha__c</fullName>
        <label>Adjetivo Fecha</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calf__c</fullName>
        <label>Calf</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheques_Devueltos__c</fullName>
        <label>Cheques Devueltos</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuotas__c</fullName>
        <label>Cuotas</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datacredito__c</fullName>
        <label>Datacredito</label>
        <referenceTo>Datacredito__c</referenceTo>
        <relationshipLabel>Carteras Vigentes</relationshipLabel>
        <relationshipName>Carteras_Vigentes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Desacuerdos__c</fullName>
        <label>Desacuerdos</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad__c</fullName>
        <label>Entidad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_Obligacion__c</fullName>
        <label>Estado Obligacion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_Titular__c</fullName>
        <label>Estado Titular</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Actualizacion__c</fullName>
        <label>Fecha Actualizacion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Apertura__c</fullName>
        <label>Fecha Apertura</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Vencimiento__c</fullName>
        <label>Fecha Vencimiento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fechas_Limite_Pago__c</fullName>
        <label>Fechas Limite Pago</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fechas_del_Pago__c</fullName>
        <label>Fechas del Pago</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marca_Clase__c</fullName>
        <label>Marca Clase</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mora_Maxima__c</fullName>
        <label>Mora Maxima</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Cuenta__c</fullName>
        <label>Numero Cuenta</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oficina__c</fullName>
        <label>Oficina</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perm__c</fullName>
        <label>Perm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Porcentaje_Deuda__c</fullName>
        <label>Porcentaje Deuda</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saldo_Actual__c</fullName>
        <label>Saldo Actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saldos_Mora__c</fullName>
        <label>Saldos Mora</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiempo__c</fullName>
        <label>Tiempo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Cuenta__c</fullName>
        <label>Tipo Cuenta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Garantia__c</fullName>
        <label>Tipo Garantia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_Cuota__c</fullName>
        <label>Valor Cuota</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_Cupo_Inicial__c</fullName>
        <label>Valor Cupo Inicial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>